--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,28 @@ header {
     display:flex;
     flex-direction: column;
     align-items: center;
-    background: #A6A9AF;
 }
-body{
-    background:#A89344;
+body {
+    background: #A8ACB2;
 }
 img {
     max-height: 150px;
     max-width: 100px;
+    margin: 10px;
+    z-index: 9 ;
 }
 nav {
     display: flex;
+    flex: 8;
     align-content: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     width:100vw;
     font-size: 2em;
     color: #A89344;
     text-shadow: 1px 1px black;
+    position: fixed;
+    /* top: 60px; */
+    background: #A8ACB2;
 }
 
 nav h3 {
@@ -33,6 +38,7 @@ main{
     min-height: 80vh;
     margin:0px 20px;
     border-radius: 5px;
+    z-index: 0;
 
 }
 
@@ -48,13 +54,15 @@ article {
 }
 .amount{
     display: flex;
-    align-items: flex-end;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end
 }
 .info{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-
+    
     max-width: 70%;
 }
 .name {
@@ -64,10 +72,12 @@ article {
 .phone {
     font-size: 1.5em;
 }
-.amount {
-    font-size: 2.4em;
-    float: left;
-    height: 100%;
-    /* border: 1px solid red; */
-    
+.amountNumber {
+    font-size: 5em;
+}
+.amount label {
+    font-size: 3em
+}
+.amount div {
+    display: flex
 }
