--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,9 @@ nav h3 {
 }
 
 main{ 
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     background: #122A45;
     padding: 20px;
     min-height: 80vh;
@@ -97,4 +100,9 @@ article {
 }
 svg {
     cursor: pointer;
+}
+.title {
+    font-size: 9em;
+    margin:10vh auto;
+    color: #ccc;
 }
