--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ article {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-end
+    align-items: flex-end;
 }
 .info{
     display: flex;
